@@ -1,3 +1,9 @@
+The following changes have been made between John 1.7.3.2 and 1.7.3.3:
+
+* "make check" has been implemented (for Unix-like systems only).
+* The --test option will now take an optional argument - the duration of each
+benchmark in seconds.
+
 The following changes have been made between John 1.7.3.1 and 1.7.3.2:
 
 * An unimportant compiler warning has been fixed, and a source code comment
@@ -71,4 +77,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.28 2009/07/26 20:29:29 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.29 2009/09/09 04:52:10 solar Exp $
